--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,13 @@
     cursor: pointer;
 }
 
+.date-field label {
+    display: inline-block;
+    width: 180px;
+    margin-right: 10px;
+    text-align: right;
+}
+
 input[type="text"] {
     width: 200px    
     padding: 8px;
